# ML-User-re-identification-in-production

./: README.md  pyproject.toml  result.csv
notebooks/: catch_joe_ml.ipynb  data_exploration.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
scripts/: predict.py  promote.py  train.py
src/catch_joe/: __init__.py  data.py  evaluation.py  features.py  modeling.py
tests/: conftest.py  test_data.py  test_evaluation.py  test_features.py
