[project]
name = "catch-joe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "mlflow>=3.13.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
